--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -31,6 +31,7 @@
       <liveTemplateContext implementation="com.anychart.plugins.GoogleClosurePlugin.templates.GoogContextType" />
 
       <liveTemplateMacro implementation="com.anychart.plugins.GoogleClosurePlugin.templates.macro.GoogCurrentNamespace" />
+      <liveTemplateMacro implementation="com.anychart.plugins.GoogleClosurePlugin.templates.macro.GoogCurrentClass" />
 
   </extensions>
 </idea-plugin>
